# ChangeLog for dev-go/go-text
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-go/go-text/ChangeLog,v 1.10 2015/07/06 17:10:56 williamh Exp $

  06 Jul 2015; William Hubbs <williamh@gentoo.org> go-text-9999.ebuild:
  Add a subslot of the version number so we know which version is installed;
  this wil allow slot operators in dependencies on this package.

*go-text-0_pre20150604 (01 Jul 2015)

  01 Jul 2015; William Hubbs <williamh@gentoo.org>
  +go-text-0_pre20150604.ebuild, -go-text-1.4.2_p20150506.ebuild,
  -go-text-1.4.2_p20150604.ebuild:
  Move latest snapshot to a pre-release of version 0

  26 Jun 2015; William Hubbs <williamh@gentoo.org> go-text-9999.ebuild:
  make live ebuild copyable

*go-text-1.4.2_p20150604 (09 Jun 2015)

  09 Jun 2015; Zac Medico <zmedico@gentoo.org> +go-text-1.4.2_p20150604.ebuild,
  go-text-9999.ebuild:
  Add 1.4.2_p20150604 snapshot with timestamp preservation for bug 551486.

  24 May 2015; Zac Medico <zmedico@gentoo.org> go-text-1.4.2_p20150506.ebuild,
  go-text-9999.ebuild:
  Add workaround for TestLinking in display/dict_test.go.

  21 May 2015; Zac Medico <zmedico@gentoo.org> go-text-1.4.2_p20150506.ebuild:
  Add ~amd64 keyword.

  21 May 2015; Zac Medico <zmedico@gentoo.org> go-text-1.4.2_p20150506.ebuild,
  go-text-9999.ebuild:
  Enable more tests.

*go-text-1.4.2_p20150506 (21 May 2015)

  21 May 2015; Zac Medico <zmedico@gentoo.org> +go-text-1.4.2_p20150506.ebuild:
  Add 1.4.2_p20150506 snapshot.

  21 May 2015; Zac Medico <zmedico@gentoo.org> go-text-9999.ebuild:
  Add src_test.

*go-text-9999 (18 May 2015)

  18 May 2015; Zac Medico <zmedico@gentoo.org> +go-text-9999.ebuild,
  +metadata.xml:
  Add go-text.